[gd_scene load_steps=22 format=4]

[ext_resource type="Script" path="res://stages/world_8/scripts/level_8-4_boss_level.gd" id="1"]
[ext_resource type="Script" path="res://objects/music_loader_custom/music_loader_custom.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cnn040q2lodum" path="res://music/smrpg-bowser.ogg" id="3"]
[ext_resource type="Resource" uid="uid://clrfplvimk4n6" path="res://music/cutscene/ending_part_1.it" id="4"]
[ext_resource type="PackedScene" uid="uid://cat0b6208nfnh" path="res://components/secrets_manager/secret_unlocker.tscn" id="5"]
[ext_resource type="Script" path="res://stages/world_8/scripts/story_mode_secret_activator.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://1do11cr84k7y" path="res://engine/objects/players/player.tscn" id="7"]
[ext_resource type="Script" path="res://objects/player_camera_custom/player_camera_custom.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://yqftjpfskche" path="res://engine/components/cam_area/cam_area.tscn" id="9"]
[ext_resource type="TileSet" uid="uid://co4kwf1fb2y5i" path="res://tilesets/castle/castle_tileset.tres" id="10"]
[ext_resource type="PackedScene" uid="uid://ugxjxrdao5el" path="res://engine/components/hud/hud.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://b1e2q1aijm7lm" path="res://gfx/backgrounds/8-4-boss.png" id="12"]
[ext_resource type="PackedScene" uid="uid://d2bajdy6e54hb" path="res://objects/final_boss_cell/final_boss_cell.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://diivlwjl0y1i7" path="res://engine/objects/bosses/bowser/bowser_trigger.tscn" id="14"]
[ext_resource type="AudioStream" uid="uid://bwlhej5mao270" path="res://music/smw2-bowser.ogg" id="15"]
[ext_resource type="PackedScene" uid="uid://b8q8ngpgfgjl5" path="res://engine/objects/bosses/bowser/bowser.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://bq45lxt7bqoma" path="res://engine/objects/bosses/bowser/bowser_edge.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://ds7djsmp0wtrq" path="res://engine/objects/bosses/bowser/bowser_jump.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://bqxorfeujkfsl" path="res://stages/world_8/objects/lava_bowser_8-4.tscn" id="19"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_8xn02"]

[sub_resource type="Curve2D" id="Curve2D_05e3f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -64, 0, 0, 0, 0, 0, -64, 0)
}
point_count = 2

[node name="Level8-4Boss" type="Node2D"]
script = ExtResource("1")
time = -1
completion_write_save = false
jump_to_scene = "res://stages/cutscenes/ending/part_1/ending_part_1.tscn"
completion_center_on_player_after_transition = true

[node name="MusicLoader" type="Node" parent="."]
script = ExtResource("2")
music_var_1 = [SubResource("AudioStreamWAV_8xn02")]
boss_music_var_2 = ExtResource("3")
boss_music_var_3 = ExtResource("3")
boss_music_volume_db = [0.0, 0.0, 0.0]
boss_music_start_from_sec = [0.0, 0.0, 0.0]
music = [ExtResource("4")]
play_immediately = false
play_globally = 2
volume_db = [12.0]

[node name="SecretUnlocker" parent="." instance=ExtResource("5")]
secrets = ["story mode no hit", "story mode no death", "story mode in secret mode", "story mode no warps", "story mode beetroot"]

[node name="Node" type="Node" parent="SecretUnlocker"]
script = ExtResource("6")

[node name="Mario" parent="." instance=ExtResource("7")]
position = Vector2(96, 336)

[node name="PlayerCamera2D" type="Camera2D" parent="."]
editor_draw_screen = false
script = ExtResource("8")
metadata/_edit_lock_ = true

[node name="CameraArea" parent="." instance=ExtResource("9")]
offset_right = 640.0
offset_bottom = 480.0
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("10")
format = 2
layer_0/tile_data = PackedInt32Array(720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0, 720916, 131072, 0, 720917, 131072, 0, 720918, 131072, 0, 655382, 131072, 0, 589846, 131072, 0, 524310, 131072, 0, 458774, 131072, 0, 393238, 131072, 0, 327702, 131072, 0, 262166, 131072, 0, 196630, 131072, 0, 131094, 131072, 0, 65558, 131072, 0, 22, 131072, 0)
metadata/_edit_lock_ = true

[node name="HUD" parent="." instance=ExtResource("11")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="8-4-boss" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(320, 240)
texture = ExtResource("12")
metadata/_edit_lock_ = true

[node name="FinalBossCell" parent="." instance=ExtResource("13")]
position = Vector2(320, 160)

[node name="Objects" type="Node2D" parent="."]

[node name="BowserTrigger" parent="." node_paths=PackedStringArray("trigger_bowser") instance=ExtResource("14")]
position = Vector2(384, 240)
curve = SubResource("Curve2D_05e3f")
trigger_area = Rect2(0, 0, 640, 480)
trigger_bowser = NodePath("../Bowser")
boss_music = ExtResource("15")

[node name="Bowser" parent="." instance=ExtResource("16")]
position = Vector2(544, 320)
health = 21
status_interval = [3.0, 0.0, 0.0, 0.0, 0.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0, 3.0]
status = [&"multiflames", &"hammer", &"hammer", &"hammer", &"hammer", &"flame", &"flame", &"burst", &"flame", &"flame", &"flame", &"flame", &"flame"]
hammer_amount = 15
hammer_interval = 0.12
burst_fireball_amount = 50
y_offset = -52
speed = Vector2(150, 0)

[node name="BowserEdge" parent="." instance=ExtResource("17")]
position = Vector2(16, 112)

[node name="BowserEdge2" parent="." instance=ExtResource("17")]
position = Vector2(624, 112)

[node name="BowserJump" parent="." instance=ExtResource("18")]
position = Vector2(192, 336)

[node name="BowserJump2" parent="." instance=ExtResource("18")]
position = Vector2(448, 336)

[node name="LavaBowser" parent="." instance=ExtResource("19")]
position = Vector2(16, 432)

[connection signal="level_completed" from="." to="SecretUnlocker/Node" method="perform_checks_and_unlock"]
